added search to expandable table add selection model - select all with working counter.

--- a/expanded-mat-table/src/app/core/components/mat-table/mat-table.component.css
+++ b/expanded-mat-table/src/app/core/components/mat-table/mat-table.component.css
@@ -30,3 +30,7 @@ mat-row:nth-child(2n+2) {
 .element-row.expanded {
   border-bottom-color: transparent;
 }
+
+.search-section {
+  margin-top:5px;
+}
